--- a/4.html
+++ b/4.html
@@ -1,32 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Chapter 4</title>
-    <link rel="stylesheet" href="Web.css">
-</head>
-<body>
+    <link rel="stylesheet" href="Web.css" />
+  </head>
+  <body>
+    <div class="sidenav">
+      <a href="Web.html">Home</a>
+      <a href="1.html">Chapter 1</a>
+      <a href="2.html">Chapter 2</a>
+      <a href="3.html">Chapter 3</a>
+      <a class="active" href="4.html">Chapter 4</a>
+      <a href="5.html">Chapter 5</a>
+      <a href="6.html">Chapter 6</a>
+      <a href="7.html">Chapter 7</a>
+      <a href="8.html">Chapter 8</a>
+    </div>
 
-<div class="sidenav">
-    <a href="Web.html">Home</a>
-    <a href="1.html">Chapter 1</a>
-    <a href="2.html">Chapter 2</a>
-    <a href="3.html">Chapter 3</a>
-    <a class="active" href="4.html">Chapter 4</a>
-    <a href="5.html">Chapter 5</a>
-    <a href="6.html">Chapter 6</a>
-    <a href="7.html">Chapter 7</a>
-    <a href="8.html">Chapter 8</a>
-</div>
+    <div class="body">
+      <div class="main">Application Package (Word, Excel, Powerpoint)</div>
+      <h1>MS-Word (Word Processor)</h1>
 
-<div class="body">
-    <div class="main">Application Package (Word, Excel, Powerpoint)</div>
-    <h1>MS-Word (Word Processor)</h1>
+      <h2>Introduction</h2>
+      <p>MS-Word is a text editing or word processing software developed by Microsoft Corporation, USA under the MS-Office package. Word processing refers to the use of a computer to create, edit, and print documents. A word processor enables us to create a document, store it electronically on a disk, display it on a screen, modify it by entering commands and characters from the keyboard, and print it on a printer. MS-Word is a Windows-based application with many powerful and advanced features to manipulate documents. With the help of this program, we can create any type of documents like letters, reports, theses, manuals, brochures, advertisements, and many other documents. Besides creating, editing, and modifying documents, MS-Word provides special facilities such as checking spelling and grammatical errors, searching for synonyms and antonyms, working with columns, tables, special symbols, pictures, graphs, charts, and more. The document created with MS-Word has “.doc” extension, while the newer version has the “.docx” extension.</p>
 
-    <h2>Introduction</h2>
-    <p>MS-Word is a text editing or word processing software developed by Microsoft Corporation, USA under the MS-Office package. Word processing refers to the use of a computer to create, edit, and print documents. A word processor enables us to create a document, store it electronically on a disk, display it on a screen, modify it by entering commands and characters from the keyboard, and print it on a printer. MS-Word is a Windows-based application with many powerful and advanced features to manipulate documents. With the help of this program, we can create any type of documents like letters, reports, theses, manuals, brochures, advertisements, and many other documents. Besides creating, editing, and modifying documents, MS-Word provides special facilities such as checking spelling and grammatical errors, searching for synonyms and antonyms, working with columns, tables, special symbols, pictures, graphs, charts, and more. The document created with MS-Word has “.doc” extension, while the newer version has the “.docx” extension.</p>
-
-    <h2>Features of MS-Word</h2>
-    <dl>
+      <h2>Features of MS-Word</h2>
+      <dl>
         <dt>a. Fast operation:</dt>
         <dd>Since MS-Word is a digital text editing software, there is no mechanical movement associated, making it faster in operation.</dd>
 
@@ -59,25 +58,25 @@
 
         <dt>k. Use of thesaurus:</dt>
         <dd>MS-Word’s thesaurus allows users to look up synonyms and antonyms quickly, enabling automatic replacement of words.</dd>
-    </dl>
+      </dl>
 
-    <img src="word.jpg" alt="Example of MS-Word Document" style="width:100%; height:auto;">
+      <img src="word.jpg" alt="Example of MS-Word Document" style="width: 100%; height: auto" />
 
-    <h1>MS-Excel (Spreadsheet)</h1>
+      <h1>MS-Excel (Spreadsheet)</h1>
 
-    <h2>Introduction</h2>
-    <p>MS-Excel is a spreadsheet software in the Microsoft Office suite that allows users to store, organize, and analyze numerical and text data. It is part of the MS-Office package. A spreadsheet program presents information clearly and can be used to perform mathematical calculations using various formulas and equations. Excel also allows us to convert spreadsheet data into various charts like bar graphs, columns, and others. It can be used to calculate data according to user needs, such as salary sheets, income and expenses statements, balance sheets, budget preparation, and grade and percentage calculations. Some application areas of Excel include:</p>
-    <ul>
+      <h2>Introduction</h2>
+      <p>MS-Excel is a spreadsheet software in the Microsoft Office suite that allows users to store, organize, and analyze numerical and text data. It is part of the MS-Office package. A spreadsheet program presents information clearly and can be used to perform mathematical calculations using various formulas and equations. Excel also allows us to convert spreadsheet data into various charts like bar graphs, columns, and others. It can be used to calculate data according to user needs, such as salary sheets, income and expenses statements, balance sheets, budget preparation, and grade and percentage calculations. Some application areas of Excel include:</p>
+      <ul>
         <li>Basic mathematical calculation</li>
         <li>Financial modeling and analysis</li>
         <li>Statistical analysis</li>
         <li>Scientific and engineering calculations</li>
         <li>Graphic presentation and more</li>
-    </ul>
-    <p>The extension of MS-Excel files is “.xlsx” and “.xls”.</p>
+      </ul>
+      <p>The extension of MS-Excel files is “.xlsx” and “.xls”.</p>
 
-    <h2>Common Terminologies Used in Spreadsheet</h2>
-    <dl>
+      <h2>Common Terminologies Used in Spreadsheet</h2>
+      <dl>
         <dt>Worksheet (Spreadsheet):</dt>
         <dd>A worksheet is a collection of rows and columns used to list, organize, and calculate data.</dd>
 
@@ -86,10 +85,10 @@
 
         <dt>Cell:</dt>
         <dd>The intersection of rows and columns is called a cell. To refer to a cell, enter a column letter followed by a row number (e.g., C2). The cell where the intersection occurs is called the active cell.</dd>
-    </dl>
+      </dl>
 
-    <h2>Features of MS-Excel</h2>
-    <dl>
+      <h2>Features of MS-Excel</h2>
+      <dl>
         <dt>Multiple Worksheets:</dt>
         <dd>It facilitates working with multiple worksheets at a time.</dd>
 
@@ -119,30 +118,30 @@
 
         <dt>Electronic Storage:</dt>
         <dd>It allows storing data electronically on any storage medium.</dd>
-    </dl>
+      </dl>
 
-    <h2>Cell Reference in Excel</h2>
-    <p>A cell location in a spreadsheet is referred to as its cell reference. To find a cell reference, look at the column heading to find which column the cell is in and across to find which row it is in. The cell reference is a combination of the column letter and row number, such as A1, B3, Z9. The column letter should always come first when writing a cell reference. This is particularly important when writing formulas or addressing cells. For example, to add values 3 and 2 located in A1 and A2 respectively, instead of writing A3=3+2, we write A3=A1+A2.</p>
+      <h2>Cell Reference in Excel</h2>
+      <p>A cell location in a spreadsheet is referred to as its cell reference. To find a cell reference, look at the column heading to find which column the cell is in and across to find which row it is in. The cell reference is a combination of the column letter and row number, such as A1, B3, Z9. The column letter should always come first when writing a cell reference. This is particularly important when writing formulas or addressing cells. For example, to add values 3 and 2 located in A1 and A2 respectively, instead of writing A3=3+2, we write A3=A1+A2.</p>
 
-    <h3>Types of Cell Reference</h3>
-    <dl>
+      <h3>Types of Cell Reference</h3>
+      <dl>
         <dt>Relative Cell Reference:</dt>
         <dd>A relative cell reference identifies the location of a cell or group of cells. By default, a spreadsheet cell reference is relative, meaning formulas and functions can be copied and pasted to other cells. Examples include A1, B4, G9, etc.</dd>
 
         <dt>Absolute Cell Reference:</dt>
         <dd>An absolute cell reference identifies a specific cell location, indicated by a dollar sign ($) before the column letter and row number (e.g., $A$2, $G$9). This keeps the cell reference fixed when copying formulas or functions.</dd>
-    </dl>
+      </dl>
 
-    <img src="excel.jpg" alt="Example of MS-Excel Spreadsheet" style="width:100%; height:auto;">
+      <img src="excel.jpg" alt="Example of MS-Excel Spreadsheet" style="width: 100%; height: auto" />
 
-    <h1>MS-PowerPoint (Presentation)</h1>
+      <h1>MS-PowerPoint (Presentation)</h1>
 
-    <h2>Introduction</h2>
-    <p>PowerPoint is the presentation software in the Microsoft Office suite. With PowerPoint, we can create dynamic and professional presentations using pre-defined layouts, themes, and templates. PowerPoint includes all the features needed to produce professional-looking presentations. A PowerPoint presentation consists of a series of slides that contain information we want to communicate with our audience. This information can include text, images, graphs, charts, videos, audio, and more. The presentation program can also be used as a supplement to older visual aid technologies such as pamphlets, handouts, posters, and chalkboards.</p>
-    <p>The extension of PowerPoint files is “.ppt”, while later versions use “.pptx”. Alternative software for MS-PowerPoint includes MagicPoint, Apple Keynote, IBM Lotus, and Harvard Graphics.</p>
+      <h2>Introduction</h2>
+      <p>PowerPoint is the presentation software in the Microsoft Office suite. With PowerPoint, we can create dynamic and professional presentations using pre-defined layouts, themes, and templates. PowerPoint includes all the features needed to produce professional-looking presentations. A PowerPoint presentation consists of a series of slides that contain information we want to communicate with our audience. This information can include text, images, graphs, charts, videos, audio, and more. The presentation program can also be used as a supplement to older visual aid technologies such as pamphlets, handouts, posters, and chalkboards.</p>
+      <p>The extension of PowerPoint files is “.ppt”, while later versions use “.pptx”. Alternative software for MS-PowerPoint includes MagicPoint, Apple Keynote, IBM Lotus, and Harvard Graphics.</p>
 
-    <h2>Features of MS-PowerPoint</h2>
-    <dl>
+      <h2>Features of MS-PowerPoint</h2>
+      <dl>
         <dt>Data Formatting:</dt>
         <dd>Formatting helps make documents much more attractive, effective, and interactive using tools like font styles, colors, and hyperlinks.</dd>
 
@@ -166,26 +165,83 @@
 
         <dt>Internet Features:</dt>
         <dd>Includes internet features such as a web toolbar, online help, and web linking.</dd>
-    </dl>
+      </dl>
 
-    <img src="ppt.jpg" alt="Example of MS-PowerPoint Presentation" style="width:100%; height:auto;">
+      <img src="ppt.jpg" alt="Example of MS-PowerPoint Presentation" style="width: 100%; height: auto" />
 
-    <h2>Important Questions</h2>
-    <ol>
-        <li>What are the main features of MS-Word?</li>
-        <li>How does mail merge benefit users?</li>
-        <li>What is the difference between .doc and .docx file extensions?</li>
-        <li>How can graphics be added to a document in MS-Word?</li>
-        <li>What is OLE and how is it used in MS-Word?</li>
-        <li>What are the key features of MS-Excel?</li>
-        <li>How do you perform a basic calculation in MS-Excel?</li>
-        <li>Explain the difference between relative and absolute cell references.</li>
-        <li>How can you create a chart in MS-Excel?</li>
-        <li>What are the uses of MS-PowerPoint?</li>
-        <li>How can you add animations to a PowerPoint slide?</li>
-        <li>What are the common file extensions for PowerPoint presentations?</li>
-    </ol>
-</div>
+      <h2>Important Questions</h2>
+      <dl>
+        <dt>What are the main features of MS-Word?</dt>
+        <dd>
+          MS-Word offers a variety of features that enhance document creation and formatting, including:
+          <ul>
+            <li><strong>Text Formatting</strong>: Options for font styles, sizes, colors, and paragraph alignment.</li>
+            <li><strong>Templates</strong>: Pre-designed templates for different types of documents like resumes, reports, and letters.</li>
+            <li><strong>Spell Check and Thesaurus</strong>: Tools for checking spelling and providing synonyms.</li>
+            <li><strong>Images and Graphics</strong>: Ability to insert and edit images, shapes, and SmartArt.</li>
+            <li><strong>Tables</strong>: Tools for creating and formatting tables to organize data.</li>
+            <li><strong>Mail Merge</strong>: A feature for creating personalized documents for mass distribution.</li>
+            <li><strong>Review Tools</strong>: Options for comments, track changes, and comparing documents.</li>
+          </ul>
+        </dd>
 
-</body>
+        <dt>How does mail merge benefit users?</dt>
+        <dd>Mail merge benefits users by allowing them to create personalized documents for a large number of recipients efficiently. This feature automates the process of merging a template document (like a letter) with a data source (like a list of names and addresses). Users can quickly generate individualized letters, labels, or envelopes, saving time and reducing the likelihood of manual errors in repetitive tasks.</dd>
+
+        <dt>What is the difference between .doc and .docx file extensions?</dt>
+        <dd>The .doc file extension represents the older binary file format used by Microsoft Word prior to the introduction of Word 2007. It is less efficient in terms of file size and lacks some advanced features. The .docx extension, introduced with Word 2007, is based on XML and allows for better data management, improved file compression, and compatibility with other applications. .docx files generally have smaller sizes and support features like improved document recovery.</dd>
+
+        <dt>What is OLE and how is it used in MS-Word?</dt>
+        <dd>OLE (Object Linking and Embedding) is a technology that allows users to insert and link objects from one application into another. In MS-Word, OLE can be used to embed or link content from other applications, such as Excel spreadsheets, PowerPoint presentations, or images. This allows users to create documents that contain dynamic content, meaning that updates to the original object can be reflected in the Word document if linked.</dd>
+
+        <dt>What are the key features of MS-Excel?</dt>
+        <dd>
+          Key features of MS-Excel include:
+          <ul>
+            <li><strong>Spreadsheet Layout</strong>: Cells organized in rows and columns for data entry and analysis.</li>
+            <li><strong>Formulas and Functions</strong>: Built-in functions for calculations, statistical analysis, and data manipulation.</li>
+            <li><strong>Charts and Graphs</strong>: Tools for visualizing data through various types of charts.</li>
+            <li><strong>PivotTables</strong>: A feature for summarizing and analyzing large data sets with ease.</li>
+            <li><strong>Data Validation</strong>: Options for controlling the type of data entered into cells.</li>
+            <li><strong>Conditional Formatting</strong>: Allows users to format cells based on specific conditions or criteria.</li>
+          </ul>
+        </dd>
+
+        <dt>How do you perform a basic calculation in MS-Excel?</dt>
+        <dd>
+          To perform a basic calculation in MS-Excel, you can enter a formula directly into a cell. For example, to add two numbers, you would:
+          <ol>
+            <li>Select a cell where you want the result to appear.</li>
+            <li>Type the equals sign (=) followed by the formula, such as =A1 + A2 (where A1 and A2 are the cell references of the numbers you want to add).</li>
+            <li>Press Enter, and the calculated result will be displayed in the selected cell.</li>
+          </ol>
+        </dd>
+
+        <dt>Explain the difference between relative and absolute cell references.</dt>
+        <dd>In MS-Excel, a <strong>relative cell reference</strong> adjusts automatically when the formula is copied to another cell. For example, if you use =A1 + B1 in cell C1 and copy it to C2, it will change to =A2 + B2. An <strong>absolute cell reference</strong>, on the other hand, remains constant regardless of where the formula is copied. This is indicated by adding dollar signs (e.g., $A$1). If you copy a formula with an absolute reference from C1 to C2, it will still refer to $A$1 and $B$1.</dd>
+
+        <dt>What are the uses of MS-PowerPoint?</dt>
+        <dd>
+          MS-PowerPoint is used for creating presentations that can include text, images, videos, charts, and diagrams. Its primary uses include:
+          <ul>
+            <li>Creating slideshows for business meetings and conferences.</li>
+            <li>Educational presentations for teaching and training purposes.</li>
+            <li>Visual storytelling for marketing and promotional activities.</li>
+            <li>Collaborative presentations that can be shared and edited by multiple users.</li>
+          </ul>
+        </dd>
+
+        <dt>What are the common file extensions for PowerPoint presentations?</dt>
+        <dd>
+          Common file extensions for PowerPoint presentations include:
+          <ul>
+            <li><strong>.ppt</strong>: The older binary file format for PowerPoint presentations.</li>
+            <li><strong>.pptx</strong>: The newer XML-based format introduced in PowerPoint 2007.</li>
+            <li><strong>.pps</strong>: A PowerPoint presentation file that opens in slideshow mode.</li>
+            <li><strong>.ppsx</strong>: The slideshow format for .pptx presentations.</li>
+          </ul>
+        </dd>
+      </dl>
+    </div>
+  </body>
 </html>
