--- a/5.html
+++ b/5.html
@@ -409,6 +409,9 @@
             Flowcharts are used in program design to visualize the steps involved in a process, making it easier to understand, analyze, and communicate complex algorithms before actual coding begins.
         </dd>
     </dl>
+    <div class="nav">
+        <a href="program.html">Example Programs</a>
+    </div>
 </div>
 
 </body>
