--- a/Web.html
+++ b/Web.html
@@ -10,7 +10,8 @@
 <a href="5.html">Chapter 5</a>
 <a href="6.html">Chapter 6</a>
 <a href="7.html">Chapter 7</a>
-<a href="8.html">Chapter 8</a></div>
+<a href="8.html">Chapter 8</a>
+<a href="DBMS.html">(Temporary Link)Chapter 1</a></div>
 
 <div class="body">
 <div class="syllabus-container">
