--- a/Web.html
+++ b/Web.html
@@ -4,7 +4,7 @@
 <head><title>Webpage</title>
 <link rel="stylesheet" href="Web.css"></head>
 <div class="topnav"><a class="active" href="Web.html">Home</a>
-<a href="1.html">Chapter 1</a>
+
 <a href="2.html">Chapter 2</a>
 <a href="3.html">Chapter 3</a>
 <a href="4.html">Chapter 4</a>
@@ -12,7 +12,8 @@
 <a href="6.html">Chapter 6</a>
 <a href="7.html">Chapter 7</a>
 <a href="8.html">Chapter 8</a>
-<a href="DBMS.html">(Temporary Link)Chapter 1</a></div>
+<a href="DBMS.html">(Temporary Link)Chapter 1</a>
+</div>
 
 <div class="body">
 <div class="syllabus-container">
