--- a/Web.html
+++ b/Web.html
@@ -4,7 +4,7 @@
 <head><title>Webpage</title>
 <link rel="stylesheet" href="Web.css"></head>
 <div class="topnav"><a class="active" href="Web.html">Home</a>
-
+<a href="1.html">Chapter 1</a>
 <a href="2.html">Chapter 2</a>
 <a href="3.html">Chapter 3</a>
 <a href="4.html">Chapter 4</a>
